# marlowe-cardano

./: '  .editorconfig  .gitignore  .hlint.yaml  .ignore  .stylish-haskell.yaml  .tidyoperators  .tidyrc.json  CONTRIBUTING.adoc  COPYING  README.adoc  README.md  RELEASE.md  TODO.md  TODO.org  activate-cardano-nodesocket-path  cabal.project  cabal.project.freeze  ci.nix  default.nix  dev-shell.nix  docker-compose.yaml  flake.nix  fourmolu.yaml  ghc-tags.yaml  hie.yaml  hydra-jobs.nix  marlowe-rolepayout.tsv  marlowe-semantics.tsv  packages.dhall  packages.nix  release.nix  run.sh  shell.nix  simple.json  stack.yaml  state.json
async-components/: async-components.cabal
cardano-integration/: README.md  cardano-integration.cabal
cardano-integration/create-testnet/: Main.hs
cardano-integration/testbed/: Main.hs
eventuo11y-extras/: README.md  eventuo11y-extras.cabal
lib/base16-aeson/: CHANGELOG.md  README.md  base16-aeson.cabal
lib/plutus-ledger-aeson/: plutus-ledger-aeson.cabal
libs/aeson-via-serialise/: README.md  aeson-via-serialise.cabal
libs/base16-aeson/: base16-aeson.cabal
marlowe/: CHANGELOG.md  README.md  best-practices.md  debugging-cookbook.md  example-contracts.md  marlowe-cardano.cabal  marlowe.cabal  security.md  test-run.sh
marlowe-actus/: README.md  marlowe-actus.cabal
marlowe-actus/changelog.d/: scriv.ini
marlowe-actus/src/: Generator.hs
marlowe-actus/test/: Spec.hs
marlowe-adapter/: marlowe-adapter.cabal
marlowe-apps/: .gitignore  20230614_140248_brian.bush_PLT_6224.rst  CHANGELOG.md  CHANGELOG.rst  Demo.md  Finder.md  Oracle.md  Pipe.md  ProofSpace.md  ReadMe.md  Scaling.md  Signing.md  Streamer.md  Wolfram.md  create-example-contract-2.sh  create-example-contract.sh  demo.sh  demo.skey.gpg  demo.testnet.address  example-processor.sh  marlowe-apps.cabal  preprod.config  preview.config  proofspace.hs  tidal.sh
marlowe-apps/changelog.d/: 20230524_064345_brian.bush_hackathon.rst  20230603_174929_brian.bush_PLT_6142.rst  20230616_104735_brian.bush_PLT_6224.md  20230616_104735_brian.bush_PLT_6224.rst  20230627_162326_brian.bush_PLT_6167.rst  20230629_185547_brian.bush_PLT_5726.md  20230629_185547_brian.bush_PLT_5726.rst  20230918_161023_brian.bush_PLT_7288.rst  20230920_162407_jhbertra_plt_7566_marlowe_apps_images.md  20231004_081912_jhbertra_plt_3535_bulk_sync.md  20240110_095329_brian.bush_PLT_9206.md  20240110_095606_brian.bush_PLT_9206.md  20240110_095944_brian.bush_PLT_9206.md  20240110_100201_brian.bush_PLT_9206.md  20240129_092918_jhbertra_plt_9268_cardano_api__.md  20240319_101549_nicolas.henin_conwayHFTree.md
marlowe-apps/demo/: Main.hs
marlowe-apps/demo.web/: index.html  launch.sh  package-lock.json  package.json  run.sh  view.css  webpack.config.js
marlowe-apps/finder/: Main.hs
marlowe-apps/oracle/: Main.hs  Main.hs.orig  Sofr.hs
marlowe-apps/pipe/: Main.hs
marlowe-apps/proofspace/: Main.hs  example-key.pem  example-request.json
marlowe-apps/scaling/: Main.hs
marlowe-apps/signing/: Main.hs
marlowe-apps/streamer/: Main.hs
marlowe-apps/tidal/: Main.hs
marlowe-benchmark/: CHANGELOG.rst  ReadMe.md  example-config.yaml  example-results.json  marlowe-benchmark.cabal
marlowe-benchmark/app/: Main.hs
marlowe-benchmark/changelog.d/: 20240104_144839_brian.bush_PLT_9014.rst  20240105_092608_brian.bush_PLT_9013.rst  20240129_140451_brian.bush_PLT_9016.rst  20240319_102239_nicolas.henin_conwayHFTree.rst
marlowe-benchmark/example/: .gitignore  ReadMe.md  benchmark-config.json  index.html  measure-benchmark.sh  measure-disk.sh  measure-sync.sh  plot-benchmarks.R  plot-sync.R
marlowe-chain-sync/: --list-options  README.md  cabal.project  cabal.project.local  chainseekd.log.config.example  docker-compose.yaml  flake.nix  marlowe-chain-sync.cabal  marlowe-chain-sync.log.config.example  sqitch.conf  sqitch.plan
marlowe-chain-sync/app/: Logging.hs  Main.hs  Options.hs
marlowe-chain-sync/chainseekd/: Logging.hs  Main.hs  Options.hs
marlowe-chain-sync/deploy/: appschema.sql  asset.sql  block.sql  drop-assets.sql  fix-collateral-index.sql  fix-upper-validity.sql  indexAddresses.sql  initial_partition.sql  md5address.sql  new-partitions.sql  partition.sql  rename-metadata.sql  scripts.sql  split-address.sql  tx.sql
marlowe-chain-sync/docs/: chain-seek-spec-1.0.md  chain-sync-spec-1.0.md  marlowe-chain-sync.1
marlowe-chain-sync/example-client/: FollowingUTxOs.hs  Main.hs  SkippingBlocks.hs
marlowe-chain-sync/marlowe-chain-copy/: Main.hs  Options.hs
marlowe-chain-sync/marlowe-chain-indexer/: Logging.hs  Main.hs  Options.hs
marlowe-chain-sync/marlowe-chain-sync/: Logging.hs  Main.hs  Options.hs
marlowe-chain-sync/marlowe-protocols/: CHANGELOG.md  marlowe-protocols.cabal
marlowe-chain-sync/nix/: cardano-node.nix  haskell.nix
marlowe-chain-sync/revert/: appschema.sql  asset.sql  block.sql  drop-assets.sql  fix-collateral-index.sql  (+10 more)
marlowe-cli/: .gitignore  CHANGELOG.md  ReadMe.ipynb  ReadMe.md  example-test.yaml  flake.nix  marlowe-cli.cabal  report.json  run-nonpab-tests.sh  run-test.sh  run-tests-quietly.sh  run-tests.sh
marlowe-client/: README.md  marlowe-client.cabal
marlowe-contracts/: CHANGELOG.md  ReadMe.md  marlowe-contracts.cabal
marlowe-dashboard-server/: README.md  marlowe-dashboard-server.cabal  marlowe-run.json
marlowe-examples/: marlowe-examples.cabal
marlowe-integration/: README.md  marlowe-integration.cabal
marlowe-integration-tests/: README.md  marlowe  marlowe-integration-tests.cabal
marlowe-object/: CHANGELOG.md  marlowe-object.cabal
marlowe-plutus/: README.md  marlowe-plutus.cabal
marlowe-protocols/: CHANGELOG.md  marlowe-protocols.cabal
marlowe-protocols-test/: marlowe-protocols-test.cabal
marlowe-runtime/: .gitignore  CHANGELOG.md  marlowe-runtime.cabal
marlowe-runtime-cli/: README.md  marlowe-runtime-cli.cabal
marlowe-runtime-web/: CHANGELOG.md  marlowe-runtime-web.cabal
marlowe-scaling/: .gitignore  ReadMe.md  marlowe-scaling.cabal
marlowe-scripts/: marlowe-scripts.cabal
marlowe-test/: CHANGELOG.md  CHANGELOG.rst  marlowe-test.cabal  stress-testing.md
(+3759 files in other folders)
