cabal-version: 3.0
name: eventuo11y-extras
version: 0.1.0.0
synopsis:
  O11y helpers for Malowe Runtime and other Marlowe processes
bug-reports: https://github.com/input-output-hk/marlowe-cardano/issues
license: Apache-2.0
author: Jamie Bertram
maintainer: jamie.bertram@iohk.io
stability: experimental
category: Language
license-files:
  LICENSE
  NOTICE

source-repository head
  type: git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir: eventuo11y-extras

library
  default-language: Haskell2010
  hs-source-dirs:   src
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TupleSections
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
  exposed-modules:
    Observe.Event.Backend.Extra
    Observe.Event.Component
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , async-components
    , containers
    , directory
    , eventuo11y
    , filepath
    , fsnotify
    , lifted-base
    , monad-control
    , some
    , stm
    , text
    , time
    , transformers-base
