cabal-version: 2.2
name: marlowe-actus
version: 0.1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type: Simple
maintainer: Yves Hauser <yves.hauser@iohk.io>
stability: experimental
author: Dmytro Kondratiuk, Yves Hauser
synopsis:
  Marlowe ACTUS: Standardised financial contracts with Marlowe
description:
  /marlowe-actus/ is an implementation of the [ACTUS](https://www.actusfrf.org)
  specification in Haskell together with generators for Marlowe contracts.
  .
  ACTUS is a [taxonomy](https://www.actusfrf.org/taxonomy) of financial contracts that
  uniformly specifies projected cash flows per contract type. A contract is evolved
  over time, i.e. state changes are triggered from event schedules and performed by
  state transformation functions, projected cash flows are determined by payoff
  functions. Future contract state and payoff might depend on observable values, like
  user provided input (a choice for example) or market values
  observed by an Oracle.
  .
  The implementation is tested against the [reference test cases](https://github.com/actusfrf/actus-tests) provided by the
  ACTUS foundation.

category: Language
extra-doc-files: README.md

source-repository head
  type: git
  location: https://github.com/input-output-hk/plutus

flag defer-plugin-errors
  description:
      Defer errors from the plugin, useful for things like Haddock that can't handle it.
  default: False
  manual: True

library actus-core
  hs-source-dirs: actus-core/src
  build-depends:
    aeson -any,
    base -any,
    mtl -any,
    sort -any,
    lens -any,
    text -any,
    time -any,
    validation -any
  default-language: Haskell2010
  default-extensions: ExplicitForAll ScopedTypeVariables
                      DeriveGeneric StandaloneDeriving DeriveLift
                      DeriveFunctor DeriveFoldable
                      DeriveTraversable
  exposed-modules:
    Actus.Core
    Actus.Domain
    Actus.Model
    Actus.Utility
  other-modules:
    Actus.Domain.BusinessEvents
    Actus.Domain.ContractTerms
    Actus.Domain.ContractState
    Actus.Domain.Schedule
    Actus.Model.Applicability
    Actus.Model.ContractSchedule
    Actus.Model.Payoff
    Actus.Model.StateInitialization
    Actus.Model.StateTransition
    Actus.Utility.ANN.Annuity
    Actus.Utility.DateShift
    Actus.Utility.ScheduleGenerator
    Actus.Utility.YearFraction
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

test-suite actus-core-test
  default-language: Haskell2010
  hs-source-dirs: actus-core/test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Spec.TestFramework
  build-depends:
    actus-core,
    aeson -any,
    base >=4.9 && <5,
    bytestring -any,
    containers -any,
    lens -any,
    mtl -any,
    pretty-simple -any,
    sort -any,
    tasty -any,
    tasty-hunit -any,
    tasty-quickcheck -any,
    text -any,
    time -any,
    validation -any,
  ghc-options:
    -Wall -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  hs-source-dirs: src
  build-depends:
    actus-core,
    base -any,
    plutus-tx -any,
    plutus-ledger,
    marlowe-cardano -any,
    time -any,
    validation -any
  default-language: Haskell2010
  default-extensions: ExplicitForAll ScopedTypeVariables
                      DeriveGeneric StandaloneDeriving DeriveLift
                      DeriveFunctor DeriveFoldable
                      DeriveTraversable
  exposed-modules:
    Actus.Marlowe
  other-modules:
    Actus.Marlowe.Instance
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

test-suite marlowe-actus-test
  default-language: Haskell2010
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Spec.Actus.Examples
  build-depends:
    actus-core,
    aeson -any,
    base >=4.9 && <5,
    bytestring -any,
    containers -any,
    scientific -any,
    marlowe-cardano,
    marlowe-actus,
    mtl -any,
    plutus-ledger -any,
    plutus-tx -any,
    pretty-simple -any,
    sort -any,
    tasty -any,
    tasty-hunit -any,
    tasty-quickcheck -any,
    text -any,
    time -any,
    validation -any,
  ghc-options:
    -Wall -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
