cabal-version:   2.2
name:            marlowe-actus
version:         0.1.0.0
license:         Apache-2.0
license-files:
  LICENSE
  NOTICE

build-type:      Simple
maintainer:      Yves Hauser <yves.hauser@iohk.io>
stability:       experimental
author:          Dmytro Kondratiuk, Yves Hauser
synopsis:        Marlowe ACTUS
description:
  /marlowe-actus/ implements generators of Marlowe contracts based on ACTUS
  contract terms.

category:        Language
extra-doc-files: README.md

source-repository head
  type:     git
  location:
    https://github.com/input-output-hk/marlowe-cardano/marlowe-actus

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

library
  hs-source-dirs:     src
  build-depends:
    , actus-core
    , base
    , marlowe-cardano
    , mtl
    , plutus-ledger-api ^>=1.7
    , plutus-tx
    , time
    , validation

  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    ScopedTypeVariables
    StandaloneDeriving

  exposed-modules:    Actus.Marlowe
  other-modules:      Actus.Marlowe.Instance
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

test-suite marlowe-actus-test
  default-language: Haskell2010
  hs-source-dirs:   test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    Spec.Actus.Examples
  build-depends:
    , actus-core
    , aeson
    , base >=4.9 && <5
    , bytestring
    , containers
    , marlowe-actus
    , marlowe-cardano
    , mtl
    , plutus-tx
    , pretty-simple
    , scientific
    , sort
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
    , time
    , validation

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
