cabal-version: 3.4
name:          marlowe-benchmark
version:       0.1.0.0
synopsis:      Benchmarking for the Marlowe Runtime
bug-reports:   https://github.com/input-output-hk/marlowe-marlowe/issues
license:       Apache-2.0
author:        Brian W Bush
maintainer:    brian.bush@iohk.io
category:      Language
license-files:
  LICENSE
  NOTICE

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir:   marlowe-benchmark

common lang
  default-language:   Haskell2010
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -threaded

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

executable marlowe-benchmark
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs
  other-modules:
    Language.Marlowe.Runtime.Benchmark
    Language.Marlowe.Runtime.Benchmark.BulkSync
    Language.Marlowe.Runtime.Benchmark.HeaderSync
    Language.Marlowe.Runtime.Benchmark.Lifecycle
    Language.Marlowe.Runtime.Benchmark.Lifecycle.Scenario
    Language.Marlowe.Runtime.Benchmark.Query
    Language.Marlowe.Runtime.Benchmark.Query.Generate
    Language.Marlowe.Runtime.Benchmark.Sync
    Paths_marlowe_benchmark

  build-depends:
    , aeson
    , base >=4.9 && <5
    , bytestring
    , cardano-api
    , cardano-api-gen
    , containers
    , data-default
    , directory
    , hedgehog-quickcheck
    , marlowe-cardano
    , marlowe-chain-sync
    , marlowe-client
    , marlowe-runtime:{marlowe-runtime, sync-api, tx-api}
    , optparse-applicative
    , ouroboros-network-protocols
    , plutus-ledger-api
    , QuickCheck
    , random
    , split
    , text
    , time
    , unliftio
    , yaml
