cabal-version: 3.0
name: marlowe-chain-sync
version: 0.0.0.0
synopsis:
  Cardano chain sync system for thee Marlowe Runtime
description:
  Marlowe runtime component for Cardano node synchronization. Communicates with
  downstream compoents using the Chain Seek protocol, which provides
  efficient push and pull-based traversal of the cardano blockchain.
bug-reports: https://github.com/input-output-hk/marlowe-cardano/issues
license: Apache-2.0
author: Jamie Bertram
maintainer: jamie.bertram@iohk.io
stability: experimental
category: Language
license-files:
  LICENSE
  NOTICE

source-repository head
  type: git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir: marlowe-chain-sync

common lang
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TupleSections
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import: lang
  hs-source-dirs:   api
  exposed-modules:
    Language.Marlowe.Runtime.Cardano.Api
    Language.Marlowe.Runtime.Cardano.Feature
    Language.Marlowe.Runtime.ChainSync.Api
  other-modules:
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , base16
    , binary
    , bytestring
    , cardano-api
    , cardano-ledger-core
    , containers
    , marlowe-protocols
    , ouroboros-consensus
    , ouroboros-network
    , plutus-tx
    , plutus-ledger-api
    , serialise
    , text
    , these
    , time
    , typed-protocols
    , vector

library libchainseek
  import: lang
  hs-source-dirs:   src
  exposed-modules:
    Language.Marlowe.Runtime.ChainSync
    Language.Marlowe.Runtime.ChainSync.Database
    Language.Marlowe.Runtime.ChainSync.Database.PostgreSQL
    Language.Marlowe.Runtime.ChainSync.Genesis
    Language.Marlowe.Runtime.ChainSync.JobServer
    Language.Marlowe.Runtime.ChainSync.NodeClient
    Language.Marlowe.Runtime.ChainSync.Server
    Language.Marlowe.Runtime.ChainSync.QueryServer
    Language.Marlowe.Runtime.ChainSync.Store
  other-modules:
  build-depends:
      base >= 4.9 && < 5
    , async-components
    , base16
    , bytestring
    , cborg
    , cardano-api
    , cardano-binary
    , cardano-crypto-wrapper
    , cardano-ledger-byron
    , cardano-ledger-babbage
    , cardano-ledger-alonzo
    , containers
    , eventuo11y
    , foldl
    , hasql
    , hasql-th
    , hasql-transaction
    , marlowe-chain-sync
    , marlowe-protocols
    , ouroboros-network
    , profunctors
    , stm
    , stm-delay
    , text
    , these
    , time
    , transformers
    , typed-protocols
    , vector
    , witherable

library plutus-compat
  import: lang
  hs-source-dirs:   plutus-compat
  visibility: public
  exposed-modules:
    Language.Marlowe.Runtime.Plutus.V2.Api
  other-modules:
  build-depends:
      base >= 4.9 && < 5
    , bytestring
    , cardano-api
    , cardano-ledger-byron
    , containers
    , marlowe-chain-sync
    , plutus-tx
    , plutus-ledger-api
    , serialise

executable chainseekd
  import: lang
  ghc-options: -threaded
  hs-source-dirs:   chainseekd
  main-is: Main.hs
  other-modules:
    Logging
    Options
    Paths_marlowe_chain_sync
  autogen-modules:
    Paths_marlowe_chain_sync
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , async-components
    , cardano-api
    , cardano-crypto-wrapper
    , cardano-ledger-byron
    , eventuo11y
    , eventuo11y-extras
    , hasql
    -- Consider removing the hasql < 1.6 constraint in cabal.project if updating hasql-pool
    , hasql-pool < 0.6
    , marlowe-chain-sync
    , marlowe-chain-sync:libchainseek
    , marlowe-protocols
    , network
    , optparse-applicative
    , ouroboros-network
    , text
    , time
    , transformers
    , uuid

executable example-client
  import: lang
  ghc-options: -threaded
  hs-source-dirs: example-client
  main-is: Main.hs
  other-modules:
    SkippingBlocks
    FollowingUTxOs
    Paths_marlowe_chain_sync
  autogen-modules:
    Paths_marlowe_chain_sync
  build-depends:
      base >= 4.9 && < 5
    , marlowe-chain-sync
    , marlowe-protocols
    , network
    , optparse-applicative
    , typed-protocols
